交通費入力画面の削除
