# document/api/swagger.yaml
@@ -1269,30 +1269,6 @@ paths:
         "500":
           $ref: "#/components/responses/InternalServerError"
 
-  "/transportation":
-    post:
-      summary: "会社交通費登録"
-      description: "会社交通費を登録する"
-      tags: ["others"]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                date:
-                  type: string
-                  description: 支払日
-                  example: "2024-02-02"
-      responses:
-        "200":
-          $ref: "#/components/responses/Ok"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-
   "/check_place_sum":
     post:
       summary: "金額チェック登録"
