# haruhi/routes/api.php
@@ -44,7 +44,6 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('/bonus', 'App\Http\Controllers\BonusController@store');
 
     Route::post('/monthly', 'App\Http\Controllers\MonthlyController@store');
-    Route::post('/transportation', 'App\Http\Controllers\TransportationController@post');
     Route::post('/check_place_sum', 'App\Http\Controllers\CheckPlaceSumController@post');
 
     Route::get('/fixed_balances', 'App\Http\Controllers\FixedBalanceController@index');
